--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.1",
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/graphql": "^14.5.0",
+    "@types/jsonwebtoken": "^8.5.1",
     "@types/mongoose": "^5.10.5",
     "@types/node": "^14.14.41",
+    "@types/passport": "^1.0.6",
+    "@types/passport-jwt": "^3.0.5",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "eslint": "^7.24.0",
@@ -21,6 +25,7 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
+    "@typegoose/typegoose": "^7.6.0",
     "apollo-server-express": "^2.23.0",
     "bcryptjs": "^2.4.3",
     "class-validator": "^0.13.1",
@@ -29,7 +34,10 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "graphql": "^15.5.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.4",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1"
   }
